Start protocol page

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -22,7 +22,7 @@
 
 		<nav class="navdrawer-container promote-layer">
 			<h4>Navigation</h4>
-			<ul id="navigation"></ul>
+			<div id="navigation"></div>
 		</nav>
 
 		<main id="main"></main>
