Websockets for player component

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -25,7 +25,10 @@
 			<div id="navigation"></div>
 		</nav>
 
-		<main id="main"></main>
+		<main>
+			<div id="player"></div>
+			<div id="main"></div>
+		</main>
 
 		<script src="/static/scripts/react.js"></script>
 		<script src="/static/scripts/jquery.min.js"></script>
