--- a/server/static/index.html
+++ b/server/static/index.html
@@ -29,8 +29,8 @@
 			<div id="main"></div>
 		</main>
 
+		<script src="/static/scripts/jquery.js"></script>
 		<script src="/static/scripts/react.js"></script>
-		<script src="/static/scripts/jquery.min.js"></script>
 		<script src="/static/scripts/main.js"></script>
 		<script src="/static/scripts/mog.js"></script>
 	</body>
