Multiple instances per protocol

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -29,6 +29,7 @@
 			<div id="main"></div>
 		</main>
 
+		<script src="/static/scripts/underscore.js"></script>
 		<script src="/static/scripts/jquery.js"></script>
 		<script src="/static/scripts/react.js"></script>
 		<script src="/static/scripts/main.js"></script>
