--- a/server/static/index.html
+++ b/server/static/index.html
@@ -1,38 +1,46 @@
-<!doctype html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" href="/favicon.ico">
+
 		<title>mog</title>
 
-		<link rel="stylesheet" href="/static/styles/components/components.css">
-		<link rel="stylesheet" href="/static/styles/main.css">
+		<link href="/static/css/bootstrap.css" rel="stylesheet">
+		<link href="/static/css/mog.css" rel="stylesheet">
 	</head>
-	<body>
-		<header class="app-bar promote-layer">
-			<div class="app-bar-container">
-				<button class="menu"><img src="/static/images/hamburger.svg" alt="Menu"></button>
-				<h1 class="logo">
-					<a href="/">mog</a>
-				</h1>
-			</div>
-		</header>
 
-		<nav class="navdrawer-container promote-layer">
-			<h4>Navigation</h4>
-			<div id="navigation"></div>
+	<body>
+
+		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+			<div class="container">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
+						<span class="sr-only">Toggle navigation</span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+					</button>
+					<a class="navbar-brand" href="#">mog</a>
+				</div>
+				<div id="navbar" class="collapse navbar-collapse">
+				</div>
+			</div>
 		</nav>
 
-		<main>
-			<div id="player"></div>
-			<div id="main"></div>
-		</main>
+		<div class="container" id="main"></div>
 
-		<script src="/static/scripts/underscore.js"></script>
-		<script src="/static/scripts/jquery.js"></script>
-		<script src="/static/scripts/react.js"></script>
-		<script src="/static/scripts/main.js"></script>
-		<script src="/static/scripts/mog.js"></script>
+		<footer class="footer">
+			<div class="container" id="player">
+			</div>
+		</footer>
+
+		<script src="/static/js/underscore.js"></script>
+		<script src="/static/js/jquery.js"></script>
+		<script src="/static/js/bootstrap.js"></script>
+		<script src="/static/js/react.js"></script>
+		<script src="/static/js/mog.js"></script>
 	</body>
 </html>
