--- a/server/static/index.html
+++ b/server/static/index.html
@@ -41,6 +41,7 @@
 		<script src="/static/js/jquery.js"></script>
 		<script src="/static/js/bootstrap.js"></script>
 		<script src="/static/js/react.js"></script>
+		<script src="/static/js/moment.js"></script>
 		<script src="/static/js/mog.js"></script>
 	</body>
 </html>
