--- a/server/static/index.html
+++ b/server/static/index.html
@@ -2,44 +2,23 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="icon" href="/favicon.ico">
-
 		<title>mog</title>
-
-		<link href="/static/css/bootstrap.css" rel="stylesheet">
+		<link href="/static/css/normalize.css" rel="stylesheet">
+		<link href="/static/css/skeleton.css" rel="stylesheet">
 		<link href="/static/css/mog.css" rel="stylesheet">
 	</head>
-
 	<body>
-
-		<nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-			<div class="container">
-				<div class="navbar-header">
-					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-						<span class="sr-only">Toggle navigation</span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-						<span class="icon-bar"></span>
-					</button>
-					<a class="navbar-brand" href="#">mog</a>
-				</div>
-				<div id="navbar" class="collapse navbar-collapse">
-				</div>
-			</div>
+		<nav>
+			<div id="navbar" class="collapse navbar-collapse"></div>
 		</nav>
-
 		<div class="container" id="main"></div>
-
 		<footer class="footer">
 			<div class="container" id="player">
 			</div>
 		</footer>
-
 		<script src="/static/js/underscore.js"></script>
 		<script src="/static/js/jquery.js"></script>
-		<script src="/static/js/bootstrap.js"></script>
 		<script src="/static/js/react.js"></script>
 		<script src="/static/js/reflux.js"></script>
 		<script src="/static/js/moment.js"></script>
