Route with react-router

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -9,17 +9,11 @@
 		<link href="/static/css/mog.css" rel="stylesheet">
 	</head>
 	<body>
-		<nav>
-			<div id="navbar" class="collapse navbar-collapse"></div>
-		</nav>
-		<div class="container" id="main"></div>
-		<footer class="footer">
-			<div class="container" id="player">
-			</div>
-		</footer>
+		<div id="main"></div>
 		<script src="/static/js/underscore.js"></script>
 		<script src="/static/js/react.js"></script>
 		<script src="/static/js/reflux.js"></script>
+		<script src="/static/js/react-router.min.js"></script>
 		<script src="/static/js/mog.js"></script>
 	</body>
 </html>
