--- a/server/static/index.html
+++ b/server/static/index.html
@@ -6,6 +6,7 @@
 		<title>mog</title>
 		<link href="/static/css/normalize.css" rel="stylesheet">
 		<link href="/static/css/skeleton.css" rel="stylesheet">
+		<link href="/static/css/font-awesome.css" rel="stylesheet">
 		<link href="/static/css/mog.css" rel="stylesheet">
 	</head>
 	<body>
