--- a/server/static/index.html
+++ b/server/static/index.html
@@ -6,14 +6,14 @@
 		<title>mog</title>
 		<link href="/static/css/normalize.css" rel="stylesheet">
 		<link href="/static/css/skeleton.css" rel="stylesheet">
-		<link href="/static/css/font-awesome.css" rel="stylesheet">
+		<link href="/static/css/font-awesome.min.css" rel="stylesheet">
 		<link href="/static/css/mog.css" rel="stylesheet">
 	</head>
 	<body>
 		<div id="main"></div>
-		<script src="/static/js/underscore.js"></script>
-		<script src="/static/js/react.js"></script>
-		<script src="/static/js/reflux.js"></script>
+		<script src="/static/js/underscore-min.js"></script>
+		<script src="/static/js/react.min.js"></script>
+		<script src="/static/js/reflux.min.js"></script>
 		<script src="/static/js/react-router.min.js"></script>
 		<script src="/static/js/mog.js"></script>
 	</body>
