Convert to fixed-data-table

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -7,14 +7,17 @@
 		<link href="/static/css/normalize.css" rel="stylesheet">
 		<link href="/static/css/skeleton.css" rel="stylesheet">
 		<link href="/static/css/font-awesome.min.css" rel="stylesheet">
+		<link href="/static/css/fixed-data-table.min.css" rel="stylesheet">
 		<link href="/static/css/mog.css" rel="stylesheet">
 	</head>
 	<body>
 		<div id="main"></div>
+		<script src="/static/js/pre.js"></script>
 		<script src="/static/js/underscore-min.js"></script>
 		<script src="/static/js/react.min.js"></script>
 		<script src="/static/js/reflux.min.js"></script>
 		<script src="/static/js/react-router.min.js"></script>
+		<script src="/static/js/fixed-data-table.min.js"></script>
 		<script src="/static/js/mog.js"></script>
 	</body>
 </html>
