--- a/server/static/index.html
+++ b/server/static/index.html
@@ -18,6 +18,7 @@
 		<script src="/static/js/reflux.min.js"></script>
 		<script src="/static/js/react-router.min.js"></script>
 		<script src="/static/js/fixed-data-table.min.js"></script>
+		<script src="/static/js/fetch.js"></script>
 		<script src="/static/js/mog.js"></script>
 	</body>
 </html>
