Switch to full fixed-data-table css to make diff easier

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>mog</title>
-		<link href="/static/css/fixed-data-table.min.css" rel="stylesheet">
+		<link href="/static/css/fixed-data-table.css" rel="stylesheet">
 		<link href="/static/css/mog.css" rel="stylesheet">
 		<link href='http://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
 	</head>
