--- a/server/static/index.html
+++ b/server/static/index.html
@@ -10,6 +10,9 @@
 	</head>
 	<body>
 		<div id="main"></div>
+		<script>
+			var mogVersion = '{{.Version}}';
+		</script>
 		<script src="/static/js/fetch.js"></script>
 		<script src="/static/js/material.min.js"></script>
 		<script src="/static/js/mog.js"></script>
