--- a/server/static/index.html
+++ b/server/static/index.html
@@ -3,18 +3,18 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>mog</title>
+		<title>moggio</title>
 		<link href="/static/css/fixed-data-table.css" rel="stylesheet">
 		<link href="/static/css/material.min.css" rel="stylesheet">
-		<link href="/static/css/mog.css" rel="stylesheet">
+		<link href="/static/css/moggio.css" rel="stylesheet">
 	</head>
 	<body>
 		<div id="main"></div>
 		<script>
-			var mogVersion = '{{.Version}}';
+			var moggioVersion = '{{.Version}}';
 		</script>
 		<script src="/static/js/fetch.js"></script>
 		<script src="/static/js/material.min.js"></script>
-		<script src="/static/js/mog.js"></script>
+		<script src="/static/js/moggio.js"></script>
 	</body>
 </html>
